# RobotPlatform

./: CmakeLists.txt
Platform_CodesysAgent/: AgentPublicDef.h
Platform_CodesysAgent/Agent/: Agent.cpp
Platform_CodesysAgent/Interface/: AgentFunc.cpp  AgentFunc.h
Platform_CodesysAgent/ShareMemory/: BaseShareMemory.cpp  BaseShareMemory.h
Platform_EleBox/: CMakeLists.txt
Platform_EleBox/ElectricityBox/: BaseEleBox.h  EleBoxFactory.cpp  EleBoxHAL.cpp  EleBoxHAL.h  EleBoxSimulation.cpp  EleBoxSimulation.h  EleBoxV2.cpp  EleBoxV2.h  EleBoxV4.cpp  EleBoxV4.h
Platform_EleBox/Modbus/: BaseModbus.cpp  BaseModbus.h  ModbusMaster.cpp  ModbusMaster.h
Platform_Main/: CmakeLists.txt  MainForm.cpp  MainForm.h  main.cpp
Platform_Public/: CmakeLists.txt  publicDef.h
Platform_StateMachine/: CMakeLists.txt  HRStatus.cpp  HRStatus.h  HRStatus_action.cpp  HRStatus_action.h  HRStatus_guard.cpp  HRStatus_guard.h  HR_FSM.cpp  HR_FSM.h  stateMachine.cpp  stateMachine.h
Platfrom_Interface/: hrc_interface.cpp  hrc_interface.h  hrc_interface_global.h
Platfrom_Interface/hrc_if_epoll/: hrc_if_epollserver.cpp  hrc_if_epollserver.h
Platfrom_Interface/hrc_if_realtime/: hrc_if_realtime.cpp  hrc_if_realtime.h
Platfrom_Interface/hrc_if_server/: hrc_if_server.cpp  hrc_if_server.h  hrc_if_server_api.h  hrc_if_server_move_api.cpp  hrc_if_server_readConfig_api.cpp  hrc_if_server_readIO_api.cpp  hrc_if_server_readModbus_api.cpp  hrc_if_server_readRobot_api.cpp  hrc_if_server_script.cpp  hrc_if_server_setConfig_api.cpp  hrc_if_server_setIO_api.cpp  hrc_if_server_setModbus_api.cpp  hrc_if_server_setRobot_api.cpp
Platfrom_Interface/hrc_if_xmlrpc_server/: hrc_if_xmlrpcServer.cpp  hrc_if_xmlrpcServer.h  hrc_if_xmlrpc_modbus_api.cpp  hrc_if_xmlrpc_modbus_api.h  hrc_if_xmlrpc_move_api.cpp  hrc_if_xmlrpc_move_api.h  hrc_if_xmlrpc_readConfig_api.cpp  hrc_if_xmlrpc_readConfig_api.h  hrc_if_xmlrpc_readIO_api.cpp  hrc_if_xmlrpc_readIO_api.h  hrc_if_xmlrpc_readRobot_api.cpp  hrc_if_xmlrpc_readRobot_api.h  hrc_if_xmlrpc_script.cpp  hrc_if_xmlrpc_script.h  hrc_if_xmlrpc_setConfig_api.cpp  hrc_if_xmlrpc_setConfig_api.h  hrc_if_xmlrpc_setIO_api.cpp  hrc_if_xmlrpc_setIO_api.h  hrc_if_xmlrpc_setRobot_api.cpp  hrc_if_xmlrpc_setRobot_api.h
SouceInPro/MyPlatform.si4project/: MyPlatform.SearchResults  MyPlatform.sip_sym  MyPlatform.sip_xab  MyPlatform.sip_xad  (+8 more)
(+108 files in other folders)
